# TP-Computacao-Grafica

./: .gitignore  Axes.cpp  BezierCurves.cpp  BezierCurves.h  CMakeLists.txt  CameraStatus.cpp  CameraStatus.h  Fruits.xml  HandleDrawSphere.cpp  HandleRenderTransform.cpp  HandleRenderTransform.h  HandlerDrawSquare.cpp  HandlerModel.cpp  HandlerModel.h  Helper.cpp  Helper.h  LightComponent.h  ParseTeapotPatch.cpp  ParseTeapotPatch.h  Parser.cpp  Parser.h  StoreModels.cpp  StoreModels.h  TextureManager.cpp  TextureManager.h  Timer.cpp  Timer.h  Transformations.cpp  Transformations.h  catmull_rom.cpp  catmull_rom.h  generated.xml  main.cpp  solarsystem.xml  solarsystem_withMeteorite.xml  test_2_2.xml  test_2_4.xml  xml_02.xml  xml_04_Groups.xml  xml_syntax.xml
DrawBasicPrimitives/: DrawCone.cpp  DrawCone.h  HandleDrawSphere.h  HandlerDrawSquare.cpp  HandlerDrawSquare.h
Generator/: CMakeLists.txt  GenerateCone.cpp  GenerateCone.h  GenerateCube.cpp  GenerateCube.h  GenerateRing.cpp  GenerateRing.h  GenerateSphere.cpp  GenerateSphere.h  Vector3.cpp  Vector3.h  bezierPatch.cpp  bezierPatch.h  main.cpp  main.h
Generator/tinyxml/: tinyxml.cpp  tinyxmlparser.cpp
Parsing/: Parser.cpp  Parser.h  TextureManager.cpp  TextureManager.h
Render/: Axes.cpp  CameraStatus.cpp  CameraStatus.h  HandleRenderTransform.cpp  HandleRenderTransform.h  HandlerModel.cpp  HandlerModel.h
TransformationsDataStruct/: StoreModels.cpp  StoreModels.h  Transform.cpp  Transform.h  Transformations.cpp  Transformations.h
xml_files/: solarsystem_LightBelow.xml  solarsystem_withMeteorite.xml  testNormals.xml  test_2_1.xml  test_2_3.xml  xml_04_Groups.xml
